Fix a bug where notifications came in the wrong order, change navbar to app's color, change app color in manifest.json, change scroll to top arrow position on tablet devices

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -122,7 +122,7 @@ code {
   outline: none;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1024px) {
   .is-scroll-to-top {
     left: 40px;
     right: unset;
